install/argocd/php-hello/php-hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: php-hello
  name: php-hello
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: php-hello
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: php-hello
    spec:
      containers:
      - image: djkormo/php-hello
        imagePullPolicy: Always
        name: php-hello
        ports:
        - containerPort: 80
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
