install/argocd/php-hello/php-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: php-hello
  name: php-hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: php-hello
  type: ClusterIP
status:
  loadBalancer: {}
