install/argocd/php-hello/php-hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-hello-server-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: myingress.northeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: php-hello
          servicePort: 80
        path: /php-hello
  tls:
  - hosts:
    - myingress.northeurope.cloudapp.azure.com
    secretName: tls-secret
